挂件终于好了，耽误了好多时间，widget里面不能用view布局，这个是教训。

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">WeatherWidget</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="_11_24">11:24</string>
 
 </resources>
